@@ -1,0 +1,2 @@
+def test():
+    raise Exception("do not run")
